# BetterHealthProject

./: .env  Dockerfile  LICENSE  Procfile  README.md  checksheet_data.json  db.sqlite3  docker-compose.yml  generate_checksheet.py  manage.py  pyproject.toml  render.yaml  requirements.txt
.github/script/: pareto.py
.github/scripts/: check_sheet.py  checksheet.py  devops_checklist.yml  generate_checklist.py  generate_checksheet.py  generate_histogram  health_checklist.md  histogram.py  pareto.py  runchart.py
.github/workflows/: check_sheet.yml  checklist.yml  checksheet.yml  generate_checksheet.yml  histogram.yml  histogram_general_report_generator.yml  historial_general_report_generator.yml  pareto.yml  runchart.yml
BetterHealthProject/: asgi.py  settings.py  urls.py  wsgi.py
admin/: urls.py  views.py
administrative/: mixins.py  views.py
betterhealth/: admin.py  api_client.py  apps.py  forms.py  models.py  urls.py  views.py
betterhealth/migrations/: 0001_initial.py  0002_cita_estado_cita_importe_alter_cita_servicio_invoice.py  0003_alter_cita_servicio.py  0003_patientprofile_numero_poliza_and_more.py  0004_service_alter_cita_estado_alter_cita_importe_and_more.py
betterhealth/templates/: login.html  register_staff.html  staff_profile.html
core/: admin.py  models.py
core/migrations/: 0001_initial.py
ishikawa/: checksheet_data.json
patient/: admin.py  forms.py  models.py  urls.py  views.py
patient/migrations/: 0001_initial.py  0002_cita.py  0002_remove_cita_motivo_remove_cita_paciente_cita_usuario_and_more.py  0003_alter_cita_servicio.py  (+1 more)
(+54 files in other folders)
