[project]
name = "betterhealthproject"
version = "0.1.0"
description = ""
authors = [
    {name = "ainhprzz",email = "ainhoapega27@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "prettytable (>=3.15.1,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
