[project]
name = "betterhealthproject"
version = "0.1.0"
description = ""
authors = [
    {name = "ainhprzz",email = "ainhoapega27@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "prettytable (>=3.15.1,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "dj-database-url (>=2.3.0,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
    "django-environ (>=0.12.0,<0.13.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
